--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -44,12 +44,10 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes Projets</h2>
-
-
-
-
-			<button type="button" class="openModal1">Modifier</button>
+			<div class="portofoliohead">
+				<h2>Mes Projets</h2>
+				<button type="button" class="openModal1" style="display:none" ;><i class="fa-solid fa-pen-to-square"></i>Modifier</button>
+			</div>
 
 			<aside id="modal1" class="modal" role="dialog" aria-labelledby="titlemodal" style="display:none;">
 				<div class="modal-wrapper">
