mis en place de la barre d'édition

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,7 +15,10 @@
 </head>
 
 <body>
+	<aside ><div id="modeedition"><i class="fa-solid fa-pen-to-square"></i><p>mode édition</p></div></aside>
+	
 	<header>
+		
 		<h1><a href="index.html">Sophie Bluel <span>Architecte d'intérieur</span></a></h1>
 		<nav>
 			<ul>
